container items wrap fixed

--- a/src/app/work/work.component.css
+++ b/src/app/work/work.component.css
@@ -15,6 +15,7 @@ a {
   margin-right: 25%;
   display: flex;
   align-items: center;
+  flex-wrap: wrap;
   justify-content: center;
 }
 .main-container .container {
